# VerseNext

./: .gitignore  LICENSE  README.md  _p2_3_verify.py  _param_count.py  _test_cometspark_v02.py  _test_p33_versenex.py  audit_report.md  pyproject.toml
data/: downloader.py
docs/: part4_upgrade_report.md  performance_tuning.md  training_guide.md
examples/: README_cpu_inference_demo.md  README_jepa_demo.md  README_minimal_lm.md  README_mnist_mlp.md  compress_train_demo.py  cpu_inference_demo.py  jepa_demo.py  minimal_lm.py  mnist_mlp.py
spark/: README.md  __init__.py  _bootstrap.py  run.py
tests/: benchmark_quantize.py  benchmark_stage6.py  test_auto_eval.py  test_bugfixes_perf.py  test_chat_data_loader.py  test_checkpoint_migrate.py  test_cometspark_inference.py  test_cometspark_nex.py  test_cometspark_v02_integration.py  test_cometspark_v05.py  test_compress_v13.py  test_compression_integration.py  test_compression_poc.py  test_custom_prompt.py  test_device_backend.py  test_downloader.py  test_dual_model.py  test_end_to_end.py  test_generation_unlimited.py  test_hybrid_stability.py  test_ijepa_cifar10.py  test_jsonl_repair.py  test_k6_signal_and_autoinit.py  test_layer_fusion.py  test_layerwise_trainer.py  test_loss_and_parallel_fix.py  test_mamba2_memory.py  test_mod_complete.py  test_nexrl.py  test_nn_advanced.py  test_no_garbled.py  test_optim_extras.py  test_p10_parallel_compress.py  test_parallel.py  test_parallel_sparse_attn.py  test_parallel_trainer.py  test_passkey.py  test_qwen_tokenizer.py  test_recursion_fix.py  test_resource_optimization.py  (+28 more)
(+114 files in other folders)
